--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,12 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: [7f:e6:cb:d6:41:1a:02:57:94:cb:60:11:94:75:57:54]
+          fingerprints: [05:cc:c8:0e:d5:4b:f6:1a:2a:99:f4:b8:90:30:62:eb]
       - run:
           name: Install dependencies
           command: |
-          apk add --update ansible
+            apk add --update ansible
       - run:
           name: Configure Server
           command: |
-          ansible-playbook -i inventory.txt playbook.yml
+            ansible-playbook -i inventory.txt
